Crates: 3 rewards per opening, ~145 rewards total, Mending on Wändezerstörer
Each crate gives 3 sequential spins = 3 prizes.
Collected rewards shown in bottom row of GUI.
Common=37, Rare=36, Epic=36, Legendary=36 reward entries.
Wändezerstörer: +Mending (Reparatur) vanilla enchant.

https://claude.ai/code/session_01EB5csWPFiTUVhrxqLvqxse